dockerClusterCreator/template_keycloak.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: keycloak
    spec:
      securityContext:
        fsGroup: 1000 
        runAsUser: 0
      containers:
      - name: keycloak
        image: activeviam-delivery-docker-internal.jfrog.io/keycloak-env:latest
        volumeMounts:
          - mountPath: /opt/jboss/keycloak/standalone/data
            name: keycloakdata
        ports:
          - name: http
            containerPort: 8080
          - name: https
            containerPort: 8443
      imagePullSecrets:
        - name: activeviam.jfrog.io
      volumes:
        - name: keycloakdata
          persistentVolumeClaim:
            claimName: keyckloak-data
