dockerClusterCreator/template_keycloak_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: keycloak
    spec:
#      nodeSelector:
#        name: vmi71989
      securityContext:
        fsGroup: 1000 
        runAsUser: 0
      containers:
      - name: keycloak
        image: activeviam-delivery-docker-internal.jfrog.io/keycloak-env:latest
        volumeMounts:
          - mountPath: /opt/jboss/keycloak/standalone/data
            name: keycloakdata
        ports:
          - name: http
            containerPort: 8080
          - name: https
            containerPort: 8443
      imagePullSecrets:
        - name: activeviam.jfrog.io
      volumes:
        - name: keycloakdata
          persistentVolumeClaim:
            claimName: keyckloak-data
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    name: keycloak
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
#    nodePort: 30181
  - name: https
    port: 8443
    targetPort: 8180
#    nodePort: 30182
  selector:
    name: keycloak
